--- a/resources/qgis2web.css
+++ b/resources/qgis2web.css
@@ -25,6 +25,7 @@ html, body {
     display: none;
     position: absolute;
     background-color: black;
+    color:white;
     padding: 15px;
     border-radius: 3px;
     bottom: 10px;
@@ -72,8 +73,8 @@ html, body {
 
 #popup-content {
 	font-size: 12px;
-    line-height: 1.2;
-    margin-top: 5px;
+        line-height: 1.2;
+        margin-top: 5px;
 	max-height: 70vh;
 	max-width: 70vw;
 	overflow: auto;
